--- a/proftpd.css
+++ b/proftpd.css
@@ -77,6 +77,7 @@ h2 + ul {
 	font-size: 13px;
 	margin-top: 6px;
 	padding-top: 0px;
+	padding-left: 2em;
 	margin-bottom: 12px;
 	padding-bottom: 0px;
 }
